# eventsource-rs

./: Cargo.toml
eventsource-rs/: Cargo.toml
eventsource-rs/src/: lib.rs  native.rs  web.rs
firedbg/: target.json
pocketbase-sdk-rs/: Cargo.toml
pocketbase-sdk-rs/src/: callbacks.rs  main.rs
src/: main.rs
test-app/: Cargo.toml
test-app/src/: main.rs
